<resources>
    <string name="app_name">BargainBuddy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="enter_your_email_and_password">Enter your email and password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_credentials_to_continue">Enter your credentials to continue</string>
    <string name="name">Name</string>
    <string name="by_continuing_you_agree_to_our_terms_and_service_and_privacy_policy">By continuing you agree to our Terms and Service and Privacy Policy</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="check_if_you_are_creating_an_account_for_your_business">Check if you are creating an account for your business</string>
    <string name="upload_promotion">Upload Promotion</string>
    <string name="title">Title</string>
    <string name="type_here">Type here</string>
    <string name="promo_code">Promo Code</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="previous_price">Previous price</string>
    <string name="new_price">New price</string>
    <string name="expiration_date">Expiration date</string>
    <string name="_00_00_00">00/00/00</string>
    <string name="upload">Upload</string>
    <string name="add_image">Add Image</string>
    <string name="upload_image">upload image</string>
    <string name="offers_for_you">Offers for you</string>
    <string name="plus">+</string>
    <string name="store">Store</string>
    <string name="previous_price_example">10</string>
    <string name="euro">€</string>
    <string name="new_price_example">8</string>
    <string name="description_example">Experience the crispness of Jumbo\'s finest apples! Use code JUMBOAPPLE10 for an extra 10% off on all apple varieties.</string>
    <string name="discount_details">Discount Details</string>
    <string name="promo_code_example">JUMBOAPPLE10</string>
    <string name="add_to_favorite">Add To Favourite</string>
    <string name="go_back_button"><![CDATA[<]]></string>
    <string name="available_until">Available Until:</string>
    <string name="search_store_or_product">Search Store or Product</string>
    <string name="fresh_fruits_and_vegetable">Fresh Fruits and Vegetable</string>
    <string name="cooking_oil_and_ghee">Cooking Oil and Ghee</string>
    <string name="fresh_fruits_n_and_vegetable">Fresh Fruits\n and Vegetable</string>
    <string name="cooking_oil_n_and_ghee">Cooking Oil\n and Ghee</string>
    <string name="meat_and_fish">Meat and Fish</string>
    <string name="bakery_and_snacks">Bakery and Snacks</string>
    <string name="dairy_and_eggs">Dairy and Eggs</string>
    <string name="pasta_and_grains">Pasta and Grains</string>
    <string name="beverages">Beverages</string>
    <string name="organic">Organic</string>
    <string name="baskets">Baskets</string>
    <string name="others">Others</string>
    <string name="search_product">Search Product</string>
    <string name="store_website_link">Store website link</string>

    <string-array name="category">
        <item>Choose category</item>
        <item>Fresh Fruits and Vegetable</item>
        <item>Cooking Oil and Ghee</item>
        <item>Meat and Fish</item>
        <item>Bakery and Snacks</item>
        <item>Dairy and Eggs</item>
        <item>Pasta and Grains</item>
        <item>Beverages</item>
        <item>Organic</item>
        <item>Baskets</item>
        <item>Others</item>
    </string-array>

    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_log_out">Log Out</string>
    <string name="lbl_area">Area</string>
    <string name="msg_myemail_gmail_c">myemail@gmail.com</string>
    <string name="msg_uploaded_promot">Uploaded Promotions </string>
    <string name="lbl_user_name">User Name</string>
    <string name="msg_general_setting">General Settings</string>
    <string name="lbl_notifications">Notifications </string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="delete_from_favourite">Delete from favourite</string>
    <string name="delete_from_favourite_">DELETE FROM FAVOURITE</string>
    <string name="x">X</string>

</resources>