<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ItemViewFragment">

    <Button
        android:id="@+id/add_to_fav_button"
        android:layout_width="348dp"
        android:layout_height="62dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_green_button"
        android:text="@string/add_to_favorite"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_back_button"
        app:srcCompat="@drawable/no_image" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textViewStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/store"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewPreviousPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:foreground="@drawable/strikethrough_foreground"
        android:text="@string/previous_price_example"
        android:textColor="@color/apps_secondary_item"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewStore"
        app:layout_constraintEnd_toEndOf="@+id/textView26"
        app:layout_constraintTop_toTopOf="@+id/textViewStore" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/euro"
        android:textColor="@color/apps_secondary_item"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPreviousPrice"
        app:layout_constraintEnd_toEndOf="@+id/textViewNewPrice"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewPreviousPrice"
        app:layout_constraintTop_toTopOf="@+id/textViewPreviousPrice"
        app:layout_constraintVertical_bias="0.437" />

    <TextView
        android:id="@+id/textViewNewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/new_price_example"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView26"
        app:layout_constraintEnd_toEndOf="@+id/textView28"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView26"
        app:layout_constraintTop_toTopOf="@+id/textView26"
        app:layout_constraintVertical_bias="0.571" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="30dp"
        android:text="@string/euro"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNewPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewNewPrice"
        app:layout_constraintTop_toTopOf="@+id/textViewNewPrice"
        app:layout_constraintVertical_bias="0.437" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/discount_details"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewStore"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStore" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="320dp"
        android:layout_height="95dp"
        android:layout_marginTop="5dp"
        android:text="@string/description_example"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/promo_code"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/add_to_fav_button"
        app:layout_constraintStart_toStartOf="@+id/textView29" />

    <TextView
        android:id="@+id/textViewPromoCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promo_code_example"
        android:textColor="@color/apps_green"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView31"
        app:layout_constraintEnd_toEndOf="@+id/textView28"
        app:layout_constraintTop_toTopOf="@+id/textView31"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/go_back_button"
        android:layout_width="42dp"
        android:layout_height="48dp"
        android:background="@color/white"
        android:text="@string/go_back_button"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/available_until"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

    <TextView
        android:id="@+id/textViewExpirationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00_00"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView22"
        app:layout_constraintEnd_toEndOf="@+id/textView28"
        app:layout_constraintTop_toTopOf="@+id/textView22" />

</androidx.constraintlayout.widget.ConstraintLayout>