<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

  <TextView
      android:id="@+id/loginNow"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:text="@string/log_in"
      android:textColor="@color/apps_green"
      app:layout_constraintStart_toEndOf="@+id/textView11"
      app:layout_constraintTop_toTopOf="@+id/textView11" />

  <TextView
      android:id="@+id/textView11"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/already_have_an_account"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.412"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button2" />

  <Button
      android:id="@+id/button2"
      android:layout_width="348dp"
      android:layout_height="62dp"
      android:layout_marginTop="20dp"
      android:background="@drawable/round_green_button"
      android:text="@string/sign_up"
      android:textColor="#fff"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView10" />

  <TextView
      android:id="@+id/textView10"
      android:layout_width="339dp"
      android:layout_height="43dp"
      android:layout_marginTop="26dp"
      android:text="@string/by_continuing_you_agree_to_our_terms_and_service_and_privacy_policy"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextWebsite" />

  <EditText
      android:id="@+id/editTextTextEmailAddress2"
      android:layout_width="343dp"
      android:layout_height="48dp"
      android:layout_marginTop="26dp"
      android:ems="10"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      android:scaleX="1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextText" />

  <EditText
      android:id="@+id/editTextTextPassword2"
      android:layout_width="343dp"
      android:layout_height="48dp"
      android:layout_marginTop="26dp"
      android:ems="10"
      android:hint="@string/password"
      android:inputType="textPassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/app_name"
      android:textColor="#EF6147"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView2" />

  <TextView
      android:id="@+id/textView8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="34dp"
      android:layout_marginTop="30dp"
      android:layout_marginEnd="321dp"
      android:shadowColor="#737373"
      android:text="@string/sign_up"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4" />

  <TextView
      android:id="@+id/textView9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/enter_your_credentials_to_continue"
      android:textColor="#7C7C7C"
      app:layout_constraintStart_toStartOf="@+id/textView8"
      app:layout_constraintTop_toBottomOf="@+id/textView8" />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="64dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/icon_bargainbuddy" />

  <EditText
      android:id="@+id/editTextText"
      android:layout_width="343dp"
      android:layout_height="48dp"
      android:layout_marginTop="20dp"
      android:ems="10"
      android:hint="@string/name"
      android:inputType="text"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView9" />

  <ProgressBar
      android:id="@+id/progressBar2"
      android:visibility="invisible"
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView11" />

  <CheckBox
      android:id="@+id/checkBox"
      android:layout_width="344dp"
      android:layout_height="48dp"
      android:layout_marginTop="26dp"
      android:text="@string/check_if_you_are_creating_an_account_for_your_business"
      android:textColor="#737373"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

  <EditText
      android:id="@+id/editTextTextWebsite"
      android:layout_width="343dp"
      android:layout_height="48dp"
      android:layout_marginTop="26dp"
      android:ems="10"
      android:hint="Website link"
      android:inputType="textUri"
      android:enabled="false"
      android:visibility="invisible"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/checkBox" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>